--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "private": true,
   "scripts": {
     "lint": "eslint js/*.js",
-    "format": "prettier --write js/*.js",
-    "build:css": "tailwindcss -i input.css -o style.css --minify",
-    "test": "node tests/utils.test.js"
+    "format": "prettier --write js/*.js"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.4"
-  },
-  "type": "module"
+    "prettier": "^3.2.5"
+  }
 }
