--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint js/*.js",
+    "lint": "eslint js/*.js --config eslint.config.js",
     "format": "prettier --write js/*.js"
   },
   "devDependencies": {
