--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "scripts": {
     "lint": "eslint js/*.js --config eslint.config.js",
-    "format": "prettier --write js/*.js"
+    "format": "prettier --write js/*.js",
+    "clear-fotos": "node scripts/clear-fotos.js"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
     "prettier": "^3.2.5"
+  },
+  "dependencies": {
+    "firebase-admin": "^11.10.1"
   }
 }
