--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "teniscarmen",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "lint": "eslint js/*.js --config eslint.config.js",
     "format": "prettier --write js/*.js",
@@ -9,10 +10,11 @@
     "export-inventory": "node scripts/export-inventory.js"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "eslint": "^8.56.0",
     "prettier": "^3.2.5"
   },
   "dependencies": {
-    "firebase-admin": "^11.10.1"
+    "firebase-admin": "^13.4.0"
   }
 }
